--- a/src/ValveGetter/ValveGetter.UI/AdvancedSettingsForm.xaml
+++ b/src/ValveGetter/ValveGetter.UI/AdvancedSettingsForm.xaml
@@ -2,11 +2,11 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Valve Service Extractor - Advanced Settings"
+        Loaded="Window_Loaded"
         Width="950"
-        SizeToContent="Height"
+        SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterScreen"
-        ResizeMode="CanResize"
-        MinHeight="620" MinWidth="900">
+        ResizeMode="CanResize">
     <Window.Resources>
         <Style TargetType="GroupBox">
             <Setter Property="Margin" Value="5"/>
@@ -75,12 +75,14 @@
             <StackPanel>
                 <RadioButton x:Name="rbDebugNone" Content="None" Margin="5"/>
                 <RadioButton x:Name="rbDebugConcise" Content="Concise - Summary only" Margin="5"/>
-                <RadioButton x:Name="rbDebugFull" Content="Full - Complete valve data" Margin="5"/>
+                <RadioButton x:Name="rbDebugFull" Content="Full - Complete extraction data" Margin="5"/>
             </StackPanel>
         </GroupBox>
 
-        <!-- MIDDLE LEFT: Input/Output Parameters -->
-        <GroupBox Grid.Row="1" Grid.Column="0" Header="Input &amp; Output Parameters">
+
+        <!-- Middle LEFT: MEP Categories -->
+        <GroupBox Grid.Row="1" Grid.Column="0" Header="MEP Categories to Search"
+                  ToolTip="Select which MEP categories to search for service data. More categories = slower performance. Only add what you need.">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
@@ -95,96 +97,119 @@
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
 
-                <CheckBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3"
-                          x:Name="chkWriteToParameters"
-                          Content="Write service values to valve parameters"
-                          Margin="5,5,5,15"/>
 
-                <Label Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3"
+                <ListBox Grid.Row="0" Grid.ColumnSpan="3" x:Name="lstMEPCategories" 
+                         Margin="5" Height="100"
+                         ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    <ListBox.ItemContainerStyle>
+                        <Style TargetType="ListBoxItem">
+                            <Setter Property="Padding" Value="5"/>
+                        </Style>
+                    </ListBox.ItemContainerStyle>
+                </ListBox>
+
+                <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Orientation="Horizontal" 
+                            HorizontalAlignment="Right" Margin="0,5,0,0">
+                    <Button Content="Add..." Click="BtnAddMEPCategory_Click"/>
+                    <Button Content="Remove" Click="BtnRemoveMEPCategory_Click"/>
+                </StackPanel>
+
+                <Separator Grid.Row="2" Grid.ColumnSpan="3" Margin="0,10" Opacity="0.3"/>
+
+                <Label Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3"
                        Content="MEP - Input Service Parameter:"
-                       Padding="0,0" FontWeight="SemiBold"/>
+                       Padding="0,0" FontWeight="SemiBold" Margin="0,0,0,3"/>
 
-                <TextBlock Grid.Row="2" Grid.Column="0" Text="Parameter:"/>
-                <TextBox Grid.Row="2" Grid.Column="1" x:Name="txtInputParameter"
+                <TextBlock Grid.Row="4" Grid.Column="0" Text="Parameter:"/>
+                <TextBox Grid.Row="4" Grid.Column="1" x:Name="txtInputParameter"
                          Margin="5" IsReadOnly="True"/>
-                <Button Grid.Row="2" Grid.Column="2" Content="Select..."
+                <Button Grid.Row="4" Grid.Column="2" Content="Select..."
                         Click="BtnSelectInputParameter_Click" Padding="10,5"/>
+
+            </Grid>
+        </GroupBox>
+
+
+
+        <!-- MIDDLE RIGHT: Valve Categories -->
+        <GroupBox Grid.Row="1" Grid.Column="1" Grid.RowSpan="1" Header="Valve Categories"
+                  ToolTip="Select categories and filters in project for desired valve collection">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+
+                <ListBox Grid.Row="0" Grid.ColumnSpan="3" x:Name="lstValveCategories" 
+                         Margin="5" Height="100"
+                         ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    <ListBox.ItemContainerStyle>
+                        <Style TargetType="ListBoxItem">
+                            <Setter Property="Padding" Value="5"/>
+                        </Style>
+                    </ListBox.ItemContainerStyle>
+                </ListBox>
+
+                <StackPanel Grid.Row="1" Grid.ColumnSpan="3" Orientation="Horizontal" 
+                            HorizontalAlignment="Right" Margin="0,5,0,0">
+                    <Button Content="Add..." Click="BtnAddValveCategory_Click"/>
+                    <Button Content="Edit" Click="BtnEditValveCategory_Click"/>
+                    <Button Content="Remove" Click="BtnRemoveValveCategory_Click"/>
+                </StackPanel>
+
+                <Separator Grid.Row="2" Grid.ColumnSpan="3" Margin="0,10" Opacity="0.3"/>
 
                 <Label Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3"
                        Content="Valve - Output Parameter:"
-                       Padding="0,10,0,0" FontWeight="SemiBold"/>
+                       Padding="0" FontWeight="SemiBold"/>
 
                 <TextBlock Grid.Row="4" Grid.Column="0" Text="Parameter:"/>
                 <TextBox Grid.Row="4" Grid.Column="1" x:Name="txtOutputParameter"
                          Margin="5" IsReadOnly="True"/>
                 <Button Grid.Row="4" Grid.Column="2" Content="Select..."
                         Click="BtnSelectOutputParameter_Click" Padding="10,5"/>
+
+                <CheckBox Grid.Row="5" Grid.ColumnSpan="3"
+                          x:Name="chkWriteToParameters"
+                          Content=" Write service values to selected valve output parameter"
+                          Margin="0,10,5,5"/>
             </Grid>
         </GroupBox>
 
-        <!-- MIDDLE RIGHT: Valve Categories -->
-        <GroupBox Grid.Row="1" Grid.Column="1" Header="Valve Categories"
-                  ToolTip="Select categories and filters in project for desired valve collection">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
 
-                <ListBox Grid.Row="0" x:Name="lstValveCategories" Margin="5">
-                    <ListBox.ItemContainerStyle>
-                        <Style TargetType="ListBoxItem">
-                            <Setter Property="Padding" Value="5"/>
-                        </Style>
-                    </ListBox.ItemContainerStyle>
-                </ListBox>
-
-                <StackPanel Grid.Row="1" Orientation="Horizontal" 
-                            HorizontalAlignment="Right" Margin="0,5,0,0">
-                    <Button Content="Add..." Click="BtnAddValveCategory_Click"/>
-                    <Button Content="Edit" Click="BtnEditValveCategory_Click"/>
-                    <Button Content="Remove" Click="BtnRemoveValveCategory_Click"/>
-                </StackPanel>
-            </Grid>
-        </GroupBox>
-
-        <!-- BOTTOM LEFT: MEP Categories -->
-        <GroupBox Grid.Row="2" Grid.Column="0" Header="MEP Categories to Search"
-                  ToolTip="Select which MEP categories to search for service data. More categories = slower performance. Only add what you need.">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-
-                <ListBox Grid.Row="0" x:Name="lstMEPCategories" Margin="5" MinHeight="100">
-                    <ListBox.ItemContainerStyle>
-                        <Style TargetType="ListBoxItem">
-                            <Setter Property="Padding" Value="5"/>
-                        </Style>
-                    </ListBox.ItemContainerStyle>
-                </ListBox>
-
-                <StackPanel Grid.Row="1" Orientation="Horizontal" 
-                            HorizontalAlignment="Right" Margin="0,5,0,0">
-                    <Button Content="Add..." Click="BtnAddMEPCategory_Click"/>
-                    <Button Content="Remove" Click="BtnRemoveMEPCategory_Click"/>
-                </StackPanel>
-            </Grid>
-        </GroupBox>
-
-        <!-- BOTTOM RIGHT: Scope -->
-        <GroupBox Grid.Row="2" Grid.Column="1" Header="Target Scope"
+        <!-- BOTTOM Left: Scope -->
+        <GroupBox Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="1" Header="Target Scope"
                   ToolTip="Select defualt scope for where the valves should be collected from">
-            <StackPanel>
-                <Label Content="Default Scope Target:" Margin="0,10"
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="150"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+
+                <Label Grid.Row="0" Grid.Column="0" Content="Default scope target:" Margin="0,10"
                        Padding="0,0" FontWeight="SemiBold"/>
-                <RadioButton x:Name="rbScopeActive" Content="Active View" Margin="5"/>
-                <RadioButton x:Name="rbScopeProject" Content="Entire Projet" Margin="5"/>
-                <Label Content="Override defualt scope if views in project browser or elements are selected:" Margin="0,10"
+                <RadioButton Grid.Row="1" Grid.Column="0" x:Name="rbScopeActive" Content="Active View" Margin="5"/>
+                <RadioButton Grid.Row="2" Grid.Column="0" x:Name="rbScopeProject" Content="Entire Projet" Margin="5"/>
+                <Label Grid.Row="0" Grid.Column="1"
+                       Content="Override defualt scope if views/elements selected:" Margin="0,10"
                        Padding="0,0" FontWeight="SemiBold"/>
-                <CheckBox x:Name="chkEnableSelectionOverride"
-                          Content="Enable Selection Overrides"
+                <CheckBox Grid.Row="1" Grid.Column="1"
+                          x:Name="chkEnableSelectionOverride"
+                          Content=" Enable Selection Overrides"
                           Margin="5">
                     <CheckBox.ToolTip>
                         <ToolTip>
@@ -203,8 +228,8 @@
                         </ToolTip>
                     </CheckBox.ToolTip>
                 </CheckBox>
+            </Grid>
 
-            </StackPanel>
         </GroupBox>
 
         <!-- Action Buttons -->
